[package]
name = "connect"
edition = "2018"
version = "1.0.0"
authors = ["Michael Richardson <mcr@sandelman.ca>"]
# build = "build.rs"

[dependencies]
socket2    = { version = "*", features = [ "pair", "unix" ] }
futures    = "0.3.1"
serde      = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_cbor = "0.11.1"
#moz_cbor   = { version = "0.1", path="/ssw/projects/pandora/riotos/cbor-rust" }
moz_cbor   = { git = "https://github.com/AnimaGUS-minerva/cbor-rust.git", branch = "implement-strings" }
nix        = { version = "0.19" }
#netlink-packet-route = { path = "/ssw/projects/pandora/connect/netlink/netlink-packet-route", version = "0.5" }
#rtnetlink     = { path = "/ssw/projects/pandora/connect/netlink/rtnetlink",     version = "0.5" }
#netlink-proto = { path = "/ssw/projects/pandora/connect/netlink/netlink-proto", version = "0.4" }
netlink-packet-route = { version = "0.5" }
rtnetlink     = { version = "0.5" }
netlink-proto = { version = "0.4" }
tokio         = { version = "0.2",    features = [ "udp", "uds", "macros", "rt-threaded", "rt-core", "io-util"] }
tokio-util    = { version = "0.2",    features = ["codec"] }
tokio-serde   = { version = "0.7.1",  features = ["cbor" ] }
bytes         = "*"
futures-sink  = "*"
gag           = "*"
libc          = "*"
custom_error  = "*"
enum_primitive = "*"
num           = "*"

[dev-dependencies]
tokio-test    = "0.2"



