[package]
name = "connect"
edition = "2018"
version = "1.0.0"
authors = ["Michael Richardson <mcr@sandelman.ca>"]
# build = "build.rs"

[dependencies]
socket2    = { version = "*", features = [ "pair", "unix", "reuseport" ] }
futures    = "0.3.15"
serde      = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_cbor = "0.11.1"
#moz_cbor   = { version = "0.1", path="/ssw/projects/pandora/riotos/cbor-rust" }
moz_cbor   = { git = "https://github.com/AnimaGUS-minerva/cbor-rust.git", branch = "implement-strings" }
nix        = { version = "0.19" }
netlink-packet-route = { version = "*" }
rtnetlink     = { version = "0.7" }
netlink-proto = { version = "0.7.0", features = [ "tokio_socket" ] }
netlink-packet-sock-diag = "*"
async-trait   = "0.1.48"
tokio         = { version = "1.7",    features = [ "macros", "io-util", "time", "process", "sync", "signal", "rt-multi-thread"] }
tokio-util    = { version = "0.6.0",  features = ["codec"] }
tokio-serde   = { version = "*",  features = ["cbor" ] }
bytes         = "*"
futures-sink  = "*"
gag           = "*"
libc          = "*"
custom_error  = "*"
rand          = "*"
structopt     = "0.3"
sysctl        = "0.4"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tokio-test    = "0.4.2"
hex-literal   = { version = "0.3.3" }

[patch.crates-io]
#netlink-proto = { git = "https://github.com/little-dude/netlink.git" }
#rtnetlink     = { git = "https://github.com/little-dude/netlink.git", features = [ "tokio_socket" ] }
hex-literal   = { git = "https://github.com/AnimaGUS-minerva/utils.git", branch = "allow-hash-comments-in-hex" }



